add_subdirectory(alloc)
add_subdirectory(args)
add_subdirectory(backtrace)
add_subdirectory(cancel)
add_subdirectory(conditionvariables)
add_subdirectory(exit)
add_subdirectory(exyielding)
add_subdirectory(fiber)
add_subdirectory(file)
add_subdirectory(generated)
add_subdirectory(loadbinaries)
add_subdirectory(loadbinary)
add_subdirectory(loadpiebinary)
add_subdirectory(message)
add_subdirectory(mutexes)
add_subdirectory(parentchild)
add_subdirectory(permissions)
add_subdirectory(printthreadname)
add_subdirectory(selfyield)
add_subdirectory(shell)
add_subdirectory(signalhandling)
add_subdirectory(spawn)
add_subdirectory(stackcheck)
add_subdirectory(threadlocalstorage)
add_subdirectory(timer)
add_subdirectory(trace)
add_subdirectory(yielding)
